GS-13618: IE wrapping fix for secondary nav (cherry picked from commit 9fc9992)

--- a/src/webapp/res/css/07_navigation/secondary-v1.css
+++ b/src/webapp/res/css/07_navigation/secondary-v1.css
@@ -57,7 +57,7 @@ General comments:
     display: block;
     outline: 0;
     text-decoration: none;
-    padding-right: 23px;
+    padding-right: 22px;
 }
 
 /*#gs-secondary .menuItem .last {*/
